<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notifier</string>
    <string name="intro">Using the controls below, customize a notification to be placed on the status bar.  When done, touch the Action Bar menu icons to set or clear it.</string>
    <string name="set_menu_title">Set</string>
    <string name="clear_menu_title">Clear</string>
    <string name="notify_title_label">Title</string>
    <string name="notify_title_hint">Enter a customized title for your notification</string>
    <string name="notify_content_title">Content</string>
    <string name="notify_content_hint">Enter the text you wish to be in the notification</string>

</resources>
