<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pluralsight.notifier.NotifierActivity">

    <TextView
        android:text="@string/intro"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/separator_vertical_margin"
        android:layout_marginBottom="@dimen/separator_vertical_margin"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:text="@string/notify_title_label"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/notify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:maxLines="1"
        android:inputType="text|textCapSentences"
        android:hint="@string/notify_title_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:text="@string/notify_content_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/notify_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:maxLines="4"
        android:inputType="text|textCapSentences"
        android:hint="@string/notify_content_hint" />

</LinearLayout>
